# daily_report

./: .gitignore  CLAUDE.md  README.md  TODO.md
.claude/: settings.local.json
.github/workflows/: daily.yml
apps/agent/: .env.example  =0.4  README.md  pyproject.toml
apps/agent/src/morningbrief/: config.py  indicators.py
apps/agent/src/morningbrief/agents/: debate.py  fundamental.py  risk.py  scoring.py
apps/agent/src/morningbrief/data/: calendar.py  edgar.py  supabase_client.py  tickers.py  yf.py
apps/agent/src/morningbrief/llm/: base.py  prompts.py
apps/agent/src/morningbrief/pipeline/: graph.py  ingest.py  orchestrator.py  outcomes.py  render.py  send.py  state.py
apps/agent/tests/: test_backfill.py  test_indicators.py
apps/agent/tests/agents/: test_debate.py  test_fundamental.py  test_risk.py  test_scoring.py
apps/agent/tests/data/: conftest.py  test_calendar.py  test_edgar.py  test_supabase_client.py  test_tickers.py  test_yf.py
apps/agent/tests/data/fixtures/: edgar_aapl_facts.json  edgar_aapl_submissions.json  edgar_amzn_facts.json
apps/agent/tests/llm/: test_base.py
apps/agent/tests/pipeline/: test_graph.py  test_ingest.py  test_metrics_persistence.py  test_orchestrator.py  test_outcomes.py  test_render.py  test_send.py
apps/site/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
scripts/: _purge_today.py  backfill.py  run_today.py  smoke_all.py  smoke_e2e.py  smoke_indicators.py  smoke_ingest.py  smoke_llm.py
supabase/migrations/: 0001_init.sql  0002_daily_metrics_scores.sql  0003_outcomes_30d.sql
(+22 files in other folders)
