[project]
name = "morningbrief"
version = "0.1.0"
description = "MorningBrief AI newsletter agent pipeline"
requires-python = ">=3.10"
dependencies = [
  "yfinance>=0.2.40",
  "requests>=2.31",
  "pandas>=2.2",
  "pandas-market-calendars>=4.4",
  "supabase>=2.5",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "responses>=0.25",
  "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morningbrief"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../.."]

[tool.ruff]
line-length = 100
target-version = "py311"
